<resources>
    <string name="app_name">SmartFinance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TOOLBAR MENU -->
    <string name="currency">Currency</string>
    <string name="settings">Settings</string>

    <!-- EXTRA'S KEYS -->
    <string name="EXTRA_SECTION">KEY_CATEGORY</string>
    <string name="EXTRA_DATE">KEY_DATE</string>
    <string name="EXTRA_ICON">KEY_ICON</string>
    <string name="EXTRA_LIST">KEY_LIST</string>
    <string name="EXTRA_NOTE">temp</string>
    <string name="EXTRA_ACCOUNT">ACCOUNT</string>
    <string name="EXTRA_CATEGORY">CATEGORY</string>
    <string name="ROW_DISPLAYABLE_TYPE">ROW_DISPLAYABLE_TYPE</string>
    <string name="EXTRA_DATE_NAME">KEY_DATE_NAME</string>
    <string name="EXTRA_TRANSACTION">TRANSACTION</string>

    <!-- NAVIGATION ITEMS -->
    <string name="nav_item_accounts">Accounts</string>
    <string name="nav_item_favourites">Favourites</string>
    <string name="nav_item_income">Income</string>
    <string name="nav_item_calculator">Calculator</string>
    <string name="nav_item_calendar">Calendar</string>
    <string name="nav_item_interval">Interval</string>
    <string name="nav_item_day">Day</string>
    <string name="nav_item_week">Week</string>
    <string name="nav_item_month">Month</string>
    <string name="nav_item_year">Year</string>
    <string name="email">Hi, [email address]</string>
    <string name="nav_expense">Expense</string>

    <!-- TRANSACTION RADIO BUTTONS -->
    <string name="income">income</string>
    <string name="expense">expense</string>

    <!-- NAV DRAWER ACTIONS -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- BUTTONS -->
    <string name="cancel_button">Cancel</string>
    <string name="logout_button">Log out</string>
    <string name="add_category_button">Add category</string>
    <string name="submit">submit</string>
    <string name="transaction_select_section">SELECT SECTION</string>
    <string name="transaction_add_to">ADD TO</string>
    <string name="add">Add</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="total_value_btn">Total: 0.00</string>
    <string name="register_btn">Register</string>
    <string name="cancel_btn">Cancel</string>
    <string name="login_btn">Login</string>

    <!-- FRAGMENT TAGS -->
    <string name="transaction_fragment_tag">Transaction Fragment</string>
    <string name="diagram_fragment_tag">Diagram Fragment</string>
    <string name="favourites_fragment_tag">Favourites Fragment</string>
    <string name="calendar_fragment_tag">Calendar</string>
    <string name="accounts_fragment_tag">Accounts Fragment</string>
    <string name="add_category_dialog">Add Category Dialog</string>

    <!-- MESSAGES -->
    <string name="transaction_success">Transaction successful!</string>
    <string name="transaction_failure">Transaction failed!</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_title">Log out!</string>
    <string name="transaction_select_account">Please select an account!</string>
    <string name="change_favourite_categories">Change favourite categories:</string>
    <string name="set_name">Set name</string>
    <string name="add_new_account">Add new account</string>
    <string name="add_new_category">Add new category</string>

    <!-- TITLES -->
    <string name="favourite_categories_title">Favourite categories:</string>
    <string name="all_categories_title">All categories:</string>
    <string name="add_more_categories_title">Add more categories:</string>
    <string name="add_category_title">Add new category</string>
    <string name="my_accounts_title">My accounts:</string>
    <string name="add_more_accounts_title">Add more accounts:</string>

    <!-- HINTS -->
    <string name="confirm_password_hint">confirm password</string>
    <string name="password_hint">password</string>
    <string name="email_hint">e-mail</string>

    <!-- TEMP -->
    <string name="transaction_input_note">add note ...</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="test_text">TEST_TEXT</string>
    <string name="note_fragment_tag">Note_input_Fragment</string>
    <string name="account_name">Account name</string>
    <string name="acount_value">0.00</string>
    <string name="or_textview">- - OR - -</string>
    <string name="filters">Filters</string>
    <string name="sortby">Sort by</string>
    <string name="start_date">Start Date</string>
    <string name="filtered_report_fragment_tag">filtered_report_tag</string>
    <string name="end_date">End Date</string>
    <string name="back">return</string>
    <string name="select_accounts">Select Accounts</string>
    <string name="to_favorite_btn">TO FAVORITE</string>
    <string name="delete_btn">DELETE</string>
    <string name="add_or_delete_category_title">Add to favorite or delete category.</string>
</resources>
