<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_to_fav_title"
        android:text="@string/add_or_delete_category_title"
        android:textSize="@dimen/all_text_size_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:background="@color/colorGreen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/delete_category_button"
            android:text="@string/delete_btn"
            android:background="@drawable/balance_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="@dimen/all_view_spacing_large"/>

        <Button
            android:id="@+id/add_to_fav_button"
            android:text="@string/to_favorite_btn"
            android:background="@drawable/balance_button"
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/cancel_category_button"
        android:text="@string/cancel_button"
        android:background="@drawable/balance_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

</LinearLayout>