<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.vladimircvetanov.smartfinance.reports.FilteredReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filtered_report_filters_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filters" />

        <Button
            android:id="@+id/filtered_report_sort_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sortby" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_view_spacing_small"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filtered_report_date_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_date"
            android:textAlignment="viewEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  -  " />

        <TextView
            android:id="@+id/filtered_report_date_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_date"
            android:textAlignment="viewStart" />
    </LinearLayout>


    <ExpandableListView
        android:id="@+id/filtered_report_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
