<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_category_title"
        android:text="@string/add_category_title"
        android:textSize="@dimen/all_text_size_middle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:textColor="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:background="@color/colorGreen"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height_two_times"
        android:padding="@dimen/all_view_spacing_large">

        <ImageView
            android:id="@+id/add_category_icon"
            android:src="@mipmap/cats"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <EditText
            android:id="@+id/add_category_name"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:hint="@string/set_name"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_addition"
            android:text="@android:string/cancel"
            android:background="@drawable/balance_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="@dimen/all_view_spacing_large"/>

        <Button
            android:id="@+id/start_addition"
            android:text="@string/add"
            android:background="@drawable/balance_button"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>