<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vladimircvetanov.smartfinance.transactionRelated.TransactionFragment">

    <FrameLayout
        android:id="@+id/transaction_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/transaction_date_display"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/all_view_spacing_standard"
            android:focusable="false"
            android:inputType="date"
            android:textColor="@color/colorOrange"

            android:textSize="@dimen/all_text_size_standard" />

        <RadioGroup
            android:id="@+id/transaction_radio"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/transaction_radio_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/transaction_radio_expense"
                android:text="@string/expense" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/transaction_radio_income"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@drawable/transaction_radio_income"
                android:layoutDirection="rtl"
                android:text="@string/income" />
        </RadioGroup>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/transaction_number_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/transaction_top_bar"
        android:layout_margin="@dimen/all_view_spacing_standard"
        android:background="@color/colorOrange"
        android:gravity="end"

        android:orientation="horizontal"
        android:padding="@dimen/all_view_spacing_tiny">

        <TextView
            android:id="@+id/transaction_number_display_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="0"
            android:textSize="@dimen/all_text_size_huge" />

        <ImageButton
            android:id="@+id/transaction_number_display_backspace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/all_view_spacing_small"
            android:background="@color/colorOrange"
            android:src="@drawable/ic_action_backspace" />
    </LinearLayout>


    <TextView
        android:clickable="true"
        android:padding="@dimen/all_view_spacing_tiny"
        android:textAlignment="center"
        android:background="@color/colorWhite"
        android:elevation="@dimen/appbar_elevation"
        android:id="@+id/transaction_note_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_below="@id/transaction_number_display"
        android:layout_marginLeft="@dimen/all_view_spacing_standard"
        android:layout_marginRight="@dimen/all_view_spacing_standard"
        android:hint="@string/transaction_input_note"/>

    <Spinner
        android:id="@+id/transaction_account_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/transaction_note_input" />

    <LinearLayout
        android:id="@+id/transaction_section_selection_layout"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_alignParentBottom="true"
        android:layout_below="@id/transaction_account_spinner"
        android:layout_marginLeft="@dimen/all_view_spacing_standard"
        android:layout_marginRight="@dimen/all_view_spacing_standard"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transaction_select_section" />

        <ListView
            android:id="@+id/transaction_account_selection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_numpad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/transaction_account_spinner"
        android:orientation="vertical">

        <LinearLayout style="@style/transaction_numpad_row">

            <TextView
                android:id="@+id/transaction_numpad_7"
                style="@style/transaction_numpad_button"
                android:text="7" />

            <TextView
                android:id="@+id/transaction_numpad_8"
                style="@style/transaction_numpad_button"
                android:text="8" />

            <TextView
                android:id="@+id/transaction_numpad_9"
                style="@style/transaction_numpad_button"
                android:text="9" />

            <TextView
                android:id="@+id/transaction_numpad_plus"
                style="@style/transaction_numpad_button"
                android:text="+" />
        </LinearLayout>

        <LinearLayout style="@style/transaction_numpad_row">

            <TextView
                android:id="@+id/transaction_numpad_4"
                style="@style/transaction_numpad_button"
                android:text="4" />

            <TextView
                android:id="@+id/transaction_numpad_5"
                style="@style/transaction_numpad_button"
                android:text="5" />

            <TextView
                android:id="@+id/transaction_numpad_6"
                style="@style/transaction_numpad_button"
                android:text="6" />

            <TextView
                android:id="@+id/transaction_numpad_minus"
                style="@style/transaction_numpad_button"
                android:text="-" />
        </LinearLayout>

        <LinearLayout style="@style/transaction_numpad_row">

            <TextView
                android:id="@+id/transaction_numpad_1"
                style="@style/transaction_numpad_button"
                android:text="1" />

            <TextView
                android:id="@+id/transaction_numpad_2"
                style="@style/transaction_numpad_button"
                android:text="2" />

            <TextView
                android:id="@+id/transaction_numpad_3"
                style="@style/transaction_numpad_button"
                android:text="3" />

            <TextView
                android:id="@+id/transaction_numpad_multiply"
                style="@style/transaction_numpad_button"
                android:text="x" />
        </LinearLayout>

        <LinearLayout style="@style/transaction_numpad_row">

            <TextView
                android:id="@+id/transaction_numpad_decimal"
                style="@style/transaction_numpad_button"
                android:text="." />

            <TextView
                android:id="@+id/transaction_numpad_0"
                style="@style/transaction_numpad_button"
                android:text="0" />

            <TextView
                android:id="@+id/transaction_numpad_equals"
                style="@style/transaction_numpad_button"
                android:text="=" />

            <TextView
                android:id="@+id/transaction_numpad_divide"
                style="@style/transaction_numpad_button"
                android:text="÷"/>
        </LinearLayout>

        <TextView
            android:id="@+id/transaction_submit_btn"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/orange_button_9"
            android:gravity="center_vertical|center_horizontal"
            android:padding="@dimen/all_view_spacing_small"

            android:text="@string/transaction_select_section"
            android:textSize="@dimen/all_text_size_large" />
    </LinearLayout>

</RelativeLayout>
